--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,19 +17,6 @@
       margin: 20px auto;
       padding: 20px 25px;
       box-shadow: 0 0 6px rgba(0,0,0,0.1);
-    }
-
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start; /* important change */
-      flex-wrap: nowrap;
-      margin-bottom: 10px;
-    }
-
-    .profile-info {
-      display: flex;
-      align-items: flex-start;
     }
 
     .profile-pic {
@@ -57,7 +43,6 @@
     .contact {
       text-align: right;
       font-size: 13px;
-      flex-shrink: 0;
     }
 
     .contact a {
@@ -131,21 +116,25 @@
 
   <div class="container">
 
-    <!-- Header -->
-    <div class="header">
-      <div class="profile-info">
-        <div class="profile-pic"></div>
-        <div class="name-title">
-          <div><strong>Farah Qayoom</strong></div>
-          <div><em>Course Instructor</em></div>
-        </div>
-      </div>
-      <div class="contact">
-        <a href="https://github.com/Farah-Qayoom/Web-Design-And-Development-Lab" target="_blank">GitHub Profile</a>
-        <a href="mailto:farahqayoom759@gmail.com">farahqayoom759@gmail.com</a>
-        <a href="tel:+92-3159549756">+92-3159549756</a>
-      </div>
-    </div>
+    <!-- Header using table layout -->
+    <table style="width: 100%; margin-bottom: 10px;">
+      <tr>
+        <td style="width: 70px;">
+          <div class="profile-pic"></div>
+        </td>
+        <td style="text-align: left;">
+          <div class="name-title">
+            <div><strong>Farah Qayoom</strong></div>
+            <div><em>Software engineer</em></div>
+          </div>
+        </td>
+        <td class="contact" style="text-align: right;">
+          <a href="https://github.com/Farah-Qayoom/Web-Design-And-Development-Lab" target="_blank">GitHub Profile</a>
+          <a href="mailto:farahqayoom759@gmail.com">farahqayoom759@gmail.com</a>
+          <a href="tel:+92-3159549756">+92-3159549756</a>
+        </td>
+      </tr>
+    </table>
 
     <div class="divider"></div>
 
